implement query event_type by action (#1)
