# api/openapi.yml
@@ -124,8 +124,38 @@ paths:
         default:
           $ref: "#/components/responses/InternalServerError"
 
+  /event-types/{event_type_action}:
+    get:
+      summary: Return the details of an Event Type
+      description: Return the details of an Event Type
+      tags:
+        - EventTypes
+      operationId: GetEventTypeByID
+      parameters:
+        - $ref: '#/components/parameters/event_type_action'
+      security:
+      # - ApiKeyAuth: [ ]
+      responses:
+        "200":
+          description: The event type
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/EventType"
+        "400":
+          $ref: '#/components/responses/BadRequestError'
+        "404":
+          $ref: '#/components/responses/NotFoundError'
+        default:
+          $ref: "#/components/responses/InternalServerError"
 components:
   parameters:
+    event_type_action:
+      name: event_type_action
+      in: path
+      required: true
+      schema:
+        type: string
     idempotency_key:
       name: idempotency_key
       in: header
@@ -152,33 +182,28 @@ components:
   schemas:
     # Event type
     EventType:
-      required: [id, action, target_types, should_validate_metadata_schema, created_at, updated_at]
+      required: [id, action, version, target_types, should_validate_metadata_schema, created_at, updated_at]
       properties:
         id:
           type: string
-          x-order: 1
+        version:
+          type: integer
         action:
           type: string
-          x-order: 2
         target_types:
           type: array
           items:
             type: string
-          x-order: 3
         schema:
           type: string
-          x-order: 4
         should_validate_metadata_schema:
           type: boolean
-          x-order: 5
         created_at:
           type: string
           format: date-time
-          x-order: 6
         updated_at:
           type: string
           format: date-time
-          x-order: 7
     EventTypeList:
       required: [ data, pagination ]
       properties:
